Changelog
=========

1.4 - (Unreleased)
------------------

1.3 - (2010-07-07)
------------------
* Add traverser in order to maintain old assessment URLs after migration [ghicaale]

1.2 - (2010-07-01)
------------------
* Removed empty folder 'locales' [ghicaale]

1.1 - (2010-07-01)
------------------
* Fix indexing of themes on Assessments [#3458 ghicaale]

1.0 - (2010-07-01)
------------------
* Initial release [ghicaale]